# Hermes

./: .gitignore  README.md
Hermes.xcodeproj/: project.pbxproj
Hermes/App/: HermesApp.swift
Hermes/Assets.xcassets/AccentColor.colorset/: Contents.json
Hermes/Models/: Event.swift  Job.swift  Paper.swift  UserProfile.swift
Hermes/Services/: RecommendationService.swift
Hermes/State/: FeedState.swift  ProfileState.swift
Hermes/Theme/: Theme.swift
Hermes/Views/: MainTabView.swift
Hermes/Views/Detail/: EventDetailView.swift  JobDetailView.swift  PaperDetailView.swift
Hermes/Views/Discovery/: DiscoveryView.swift  EventsSectionView.swift  FeedCardView.swift  JobsSectionView.swift  PapersSectionView.swift
Hermes/Views/Profile/: ProfileView.swift
python/: config.example.yaml  pyproject.toml
python/src/hermes_news/: __init__.py  __main__.py  cli.py  config.py  models.py  pipeline.py
python/src/hermes_news/output/: __init__.py  markdown.py  obsidian.py
python/src/hermes_news/scoring/: __init__.py  keyword.py  source_priority.py  tfidf.py
python/src/hermes_news/sources/: __init__.py  arxiv.py  hackernews.py  reddit.py  rss.py
python/src/hermes_news/storage/: __init__.py  schema.sql
python/src/hermes_news/tagging/: __init__.py  rules.py
web/: .mcp.json  package-lock.json  package.json  vercel.json
web/src/: middleware.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: feed-sync.tsx  github-stars.tsx  keyboard.tsx  nav.tsx  profile-sync.tsx  ui.tsx  undo-toast.tsx  user-menu.tsx
web/supabase/: schema.sql
(+55 files in other folders)
